# fpl-tips

./: .env.example  .gitignore  BACKTEST_SOLUTION.md  CAPTAIN_FIX_REPORT.md  CLAUDE.md  FIX_IMPLEMENTATION_REPORT.md  PROJECT_REVIEW_REPORT.md  README.md  SEASON_STATUS_REPORT.md  SYSTEM_DOCUMENTATION.md  analyze_milp_budget.py  analyze_salah_bruno.py  app.py  app_advanced.py  bug_analysis_report.py  config.yaml  debug_captain_scoring.py  debug_sorting.py  debug_transfer_priority.py  fpl.py  gui_demo.md  migrate_data_pipeline.py  pyproject.toml  requirements.txt  run_gui.py  test_budget_fix.py  test_milp_debug.py  test_more_transfers.py  test_transfer_logic.py
config/: scoring_weights.json
src/: captain_scorer.py  chip_strategy.py  main.py  milp_team_manager.py  my_team.py  team_builder.py  team_optimizer.py  transfer_strategy.py
src/commands/: __init__.py
src/data/: data_merger.py  data_validator.py  fpl_api.py  name_matcher.py  odds_api.py
src/models/: backtester.py  optimizer.py  rule_based_scorer.py
tests/: test_bug_fixes.py  test_connection_issue.py  test_data_validation.py  test_debug.py  test_delete_verify.py  test_exact_query.py  test_milp_myteam.py  test_milp_only.py  test_optimizer.py  test_save_issue.py  test_strategic_chips.py  test_team_id_fetching.py  test_transaction.py  test_transfer_strategy.py
